# lora-datasets

./: .gitignore  AGENTS.md  README.md  character_lora_config.yaml  prompt.md  prompt_character.md  prompt_style.md  resize_to_jpeg.sh  resize_to_webp.sh
.zed/: settings.json
caption/: README.md  generation.py  main.py  pyproject.toml  run.sh
caption/prompt/: prompt_character.md  prompt_person.md  prompt_style.md
caption/tests/: test_generation.py  test_main.py  test_project_config.py
config/: person_lora_config.yaml  style_lora_config.yaml
data/hanaame/: 006_1_4.txt  010_1_8.txt  01_1_1 copy.txt  12_1_14.txt  13_1_15.txt  26_SELF_S_11.txt  29_SELF_T_20.txt
data/hanaxame/: 006_1_4.txt  010_1_8.txt  012_1_10.txt  01_1_1 copy.txt  01_1_1.txt  020_1_18.txt  029_1_27.txt  02_1_2.txt  032_1_30.txt  03_1_3.txt  04_1_4.txt  04_OYM_4.txt  05_1_3.txt  05_1_5.txt  07_OYM_7.txt  09_1_10.txt  10_1_11.txt  12_1_14.txt  13_1_15.txt  15_1_15.txt  19_OYM_19.txt  19_SELF_G_1.txt  20_SELF_T_9.txt  25_OYM_25.txt  25_SELF_T_16.txt  26_OYM_26.txt  26_SELF_S_11.txt  29_SELF_T_20.txt
data/person_hanaame/: 012_1_10.txt  01_1_1.txt  020_1_18.txt  032_1_30.txt  05_1_3.txt  10_1_11.txt  19_SELF_G_1.txt  25_OYM_25.txt
data/person_miu_cos/: 01.txt  01_Megumi_1.txt  02.txt  03.txt  03_Megumi_3.txt  03_Utaha_3.txt  04.txt  06.txt  06_Utaha_6.txt  07_FRI_5076_Recovered.txt  08_Megumi_8.txt  09.txt  09_Megumi_9.txt  10_FRI_5079.txt  10_Megumi_10.txt  10_Utaha_10.txt  11.txt  12_Megumi_12.txt  13.txt  13_Utaha_13.txt  15a.txt  (+33 more)
review/: README.md  main.py  pyproject.toml  run.command  run.sh
(+326 files in other folders)
