[project]
name = "caption"
version = "0.1.0"
description = "Desktop app for generating and editing LoRA dataset captions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0.0",
    "pillow>=10.0",
    "torch>=2.6.0",
    "torchvision>=0.20.0",
    "transformers>=4.57.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
