[project]
name = "caption"
version = "0.1.0"
description = "Desktop app for generating and editing LoRA dataset captions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0.0",
    "pillow>=10.0",
    "torch>=2.6.0",
    "torchvision>=0.20.0",
    "transformers>=4.57.0",
]

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ty.environment]
python-version = "3.13"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]
